--- a/src/style/Settings.css
+++ b/src/style/Settings.css
@@ -2,10 +2,10 @@
     margin: 10px 0;
 }
 
-.email-address {
+.password {
     margin: 10px 0;
 }
 
-.message {
+.password-verify {
     margin: 10px 0;
 }
